upload file online success

--- a/node/src/views/admin/pages/products/create.pug
+++ b/node/src/views/admin/pages/products/create.pug
@@ -29,6 +29,9 @@ block main
           .form-group.mb-3
             label(for="desc") Mô tả
             textarea.form-control(id="desc", name="description", rows="5", placeholder="Nhập mô tả sản phẩm", required)
+          .form-group.mb-3
+            label(for="desc") Sku
+            textarea.form-control(id="sku", name="sku", rows="5", placeholder="Nhập mô tả sản phẩm")
 
           .form-group.mb-3
             label(for="price") Giá
