--- a/node/src/views/admin/patirals/header.pug
+++ b/node/src/views/admin/patirals/header.pug
@@ -1,29 +1,32 @@
 header.header
-  nav.navbar.navbar-expand-lg.navbar-dark.bg-danger
+  nav.navbar.navbar-expand-lg.navbar-dark.bg-danger.shadow-sm.py-2
     .container
-      .row.align-items-center.w-100
-        .col-3
-          .inner-logo
-            a.navbar-brand(href="/")
-              img(src="/img/ST.png" alt="Logo" width="120")
-        .col-9
-          .inner-menu
-            button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
-              span.navbar-toggler-icon
-            #navbarNav.collapse.navbar-collapse
-              ul.navbar-nav.ms-auto
-                li.nav-item
-                  a.nav-link.active(href="/home" aria-current="page") Trang chủ
-                li.nav-item
-                  a.nav-link(href="/products") Sản phẩm
-                li.nav-item.dropdown
-                  a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false")
-                    | Tùy chọn
-                  ul.dropdown-menu.dropdown-menu-end(aria-labelledby="navbarDropdown")
-                    li
-                      a.dropdown-item(href="/admin/dashboard") Tổng quan
-                    li
-                      a.dropdown-item(href="/admin/products") Sản phẩm
-               
-
-                  
+      a.navbar-brand.d-flex.align-items-center(href="/")
+        img(src="/img/ST.png" alt="Logo" width="50" class="me-2")
+        span.fw-bold.fs-4.text-white ShopTech
+      button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
+        span.navbar-toggler-icon
+      #navbarNav.collapse.navbar-collapse
+        ul.navbar-nav.ms-auto.mb-2.mb-lg-0
+          li.nav-item
+            a.nav-link.active.text-white.fw-semibold(href="/home" aria-current="page") Trang chủ
+          li.nav-item
+            a.nav-link.text-white.fw-semibold(href="/products") Sản phẩm
+          li.nav-item.dropdown
+            a.nav-link.dropdown-toggle.text-white.fw-semibold(href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false")
+              | Tùy chọn
+            ul.dropdown-menu.dropdown-menu-end(aria-labelledby="navbarDropdown")
+              li
+                a.dropdown-item(href="/admin/dashboard") Tổng quan
+              li
+                a.dropdown-item(href="/admin/products") Sản phẩm
+  style.
+    .navbar-nav .nav-link:hover, .navbar-nav .nav-link.active {
+      color: #ffc107 !important;
+      transition: color 0.2s;
+    }
+    .navbar-brand img {
+      border-radius: 8px;
+      background: #fff;
+      padding: 2px;
+    }
