fix lại phần edit products

--- a/node/src/views/admin/mixins/sort.pug
+++ b/node/src/views/admin/mixins/sort.pug
@@ -3,6 +3,8 @@ mixin sort()
         select.form-control(name="sort" sort-select)
             option(value="position-desc") 🡻 Vị trí giảm dần
             option(value="position-asc") 🡹 Vị trí tăng dần
+            option(value="price-desc") 🡻 Giá giảm dần
+            option(value="price-asc") 🡹 Giá tăng dần
             option(value="title-asc") A → Z
             option(value="title-desc") Z → A
         button.btn.btn-outline-danger.mt-2(sort-clear) Xóa lọc
