--- a/node/src/views/admin/pages/products/create.pug
+++ b/node/src/views/admin/pages/products/create.pug
@@ -7,8 +7,10 @@ block main
     .row.justify-content-center
       .col-lg-8
         .card.shadow-lg.rounded
-          .card-header.bg-primary.text-white
-            h2.mb-0 Thêm Chuyến Bay Mới
+          .card-header.bg-gradient-primary-to-secondary.py-4.mb-4.rounded.shadow
+            h2.mb-0.text-primary.text-center.font-weight-bold(style="text-shadow:2px 2px 8px #aaa;letter-spacing:2px;") 
+              i.fas.fa-list-alt.mr-2
+              | Thêm sản phẩm mới
           .card-body
             // Hiển thị thông báo lỗi
             if messages && messages.error
@@ -79,3 +81,7 @@ block main
                 .col-12.mt-4.d-flex.justify-content-between
                   button(type="submit", class="btn btn-primary btn-lg px-5") Thêm mới
                   a(href=`${prefixAdmin}/products`, class="btn btn-secondary btn-lg px-5") Hủy
+  style.
+    .bg-gradient-primary-to-secondary {
+        background: linear-gradient(90deg,rgb(204, 223, 78) 0%,rgb(28, 197, 200) 100%);
+    }
