--- a/node/src/views/admin/pages/products/edit.pug
+++ b/node/src/views/admin/pages/products/edit.pug
@@ -4,7 +4,13 @@ include ../../mixins/alert.pug
 block main
   +alertError(5000)
   .container.mt-5
-    h1.mb-4.text-primary.text-center.fw-bold Sửa chuyến bay 
+    .row.justify-content-center
+      .col-lg-8
+        .card.shadow-lg.rounded
+          .card-header.bg-gradient-primary-to-secondary.py-4.mb-4.rounded.shadow
+            h2.mb-0.text-primary.text-center.font-weight-bold(style="text-shadow:2px 2px 8px #aaa;letter-spacing:2px;") 
+              i.fas.fa-list-alt.mr-2
+              | Sửa sản phẩm
 
     // Hiển thị thông báo lỗi
     if messages && messages.error
@@ -20,41 +26,41 @@ block main
 
     .row.justify-content-center
       .col-md-8.col-lg-7
-        form(action="/admin/products/create", id="form-create-product", method="post", enctype="multipart/form-data")
+        form(action=`${prefixAdmin}/products/edit/${product.id}?_method=PATCH`, id="form-edit-product", method="post", enctype="multipart/form-data")
           .card.shadow-lg.rounded-4.p-4.mb-4.bg-light
             .card-body
               .row.g-3
                 .col-12
                   .form-group
                     label.fw-semibold(for="title") Tiêu đề
-                    input(type="text", class="form-control", id="title", name="title", minlength="5", placeholder="Nhập tiêu đề sản phẩm (ít nhất 5 ký tự)", required)
+                    input(type="text", class="form-control", id="title", name="title", minlength="5",required, value=product.title)
                 .col-12
                   .form-group
                     label.fw-semibold(for="desc") Mô tả
-                    textarea.form-control(id="desc", name="description", rows="4", placeholder="Nhập mô tả sản phẩm", required)
+                    textarea.form-control(id="desc", name="description", rows="4", required) #{product.description}
                 .col-md-6
                   .form-group
                     label.fw-semibold(for="sku") SKU
-                    input(type="text", class="form-control", id="sku", name="sku", placeholder="Nhập mã SKU sản phẩm")
+                    input(type="text", class="form-control", id="sku", name="sku",value=product.sku)
                 .col-md-6
                   .form-group
                     label.fw-semibold(for="price") Giá
-                    input(type="number", class="form-control", id="price", name="price", value="0", min="0", placeholder="Nhập giá sản phẩm", required)
+                    input(type="number", class="form-control", id="price", name="price", value=product.price, required)
                 .col-md-6
                   .form-group
                     label.fw-semibold(for="discount") % Giảm giá
-                    input(type="number", class="form-control", id="discount", name="discountPercentage", value="0", min="0", max="100", placeholder="Nhập % giảm giá (0-100)")
+                    input(type="number", class="form-control", id="discount", name="discountPercentage", value=product.discountPercentage)
                 .col-md-6
                   .form-group
                     label.fw-semibold(for="stock") Số lượng
-                    input(type="number", class="form-control", id="stock", name="stock", value="0", min="0", placeholder="Nhập số lượng sản phẩm", required)
+                    input(type="number", class="form-control", id="stock", name="stock", required , value=product.stock)
                 .col-12
                   .form-group.mb-3(data-upload-image)
                     label.fw-semibold(for="thumbnail") Ảnh sản phẩm
                     input(type="file", class="form-control", id="thumbnail", name="thumbnail", accept="image/*", data-upload-image-input)
                     .mt-2
                       img(
-                        src=""
+                        src=product.thumbnail
                         class="image-preview border rounded shadow-sm d-block mb-2"
                         style="max-width: 180px; max-height: 180px; object-fit: cover;"
                         data-upload-image-preview
@@ -63,7 +69,7 @@ block main
                 .col-md-6
                   .form-group
                     label.fw-semibold(for="position") Vị trí
-                    input(type="number", class="form-control", id="position", name="position", placeholder="Tự động tăng", min="-2")
+                    input(type="number", class="form-control", id="position", name="position", value=product.position)
                 .col-md-6
                   .form-group
                     label.fw-semibold.d-block Trạng thái
@@ -77,3 +83,8 @@ block main
               .form-group.mt-4.d-flex.justify-content-between
                 button(type="submit", class="btn btn-primary btn-lg px-5") Cập nhật
                 a(href=`${prefixAdmin}/products`, class="btn btn-secondary btn-lg px-5") Hủy
+ 
+  style.
+    .bg-gradient-primary-to-secondary {
+        background: linear-gradient(90deg,rgb(204, 223, 78) 0%,rgb(28, 197, 200) 100%);
+    }
