--- a/node/src/views/admin/pages/products/createCategory.pug
+++ b/node/src/views/admin/pages/products/createCategory.pug
@@ -7,8 +7,10 @@ block main
     .row.justify-content-center
       .col-lg-8
         .card.shadow-lg.rounded
-          .card-header.bg-primary.text-white
-            h2.mb-0 Thêm danh muc moi
+          .card-header.bg-gradient-primary-to-secondary.py-4.mb-4.rounded.shadow
+            h1.mb-0.text-primary.text-center.font-weight-bold(style="text-shadow:2px 2px 8px #aaa;letter-spacing:2px;") 
+              i.fas.fa-list-alt.mr-2
+              | Thêm Danh Mục  Sản Phẩm
           .card-body
             // Hiển thị thông báo lỗi
             if messages && messages.error
