--- a/node/src/views/admin/patirals/footer.pug
+++ b/node/src/views/admin/patirals/footer.pug
@@ -30,11 +30,11 @@ footer.bg-light.text-center.text-lg-start.mt-5.shadow-lg.rounded-top
       .col-lg-4.col-md-12.mb-4
         h5.text-danger.mb-3.fw-bold Theo dõi chúng tôi
         .d-flex.justify-content-center.align-items-center.gap-4.mt-2
-          a(href="https://facebook.com/airline" target="_blank" aria-label="Facebook" title="Facebook")
+          a(href="https://web.facebook.com/nguyen.van.sam.1555" target="_blank" aria-label="Facebook" title="Facebook")
             i.fab.fa-facebook-f.text-white.bg-primary.rounded-circle.p-3.shadow(style="font-size: 1.5rem; transition: background 0.2s;")
-          a(href="https://twitter.com/airline" target="_blank" aria-label="Twitter" title="Twitter")
+          a(href="https://web.facebook.com/nguyen.van.sam.1555" target="_blank" aria-label="Twitter" title="Twitter")
             i.fab.fa-twitter.text-white.bg-info.rounded-circle.p-3.shadow(style="font-size: 1.5rem; transition: background 0.2s;")
-          a(href="https://instagram.com/airline" target="_blank" aria-label="Instagram" title="Instagram")
+          a(href="https://www.instagram.com/nguyensam284/" target="_blank" aria-label="Instagram" title="Instagram")
             i.fab.fa-instagram.text-white.bg-danger.rounded-circle.p-3.shadow(style="font-size: 1.5rem; transition: background 0.2s;")
   .text-center.p-3.bg-danger.text-white.rounded-bottom.mt-4.shadow-sm
     p.mb-1 © 2025 Hệ thống bán vé máy bay. All rights reserved.
