--- a/node/src/views/admin/pages/products/editCategory.pug
+++ b/node/src/views/admin/pages/products/editCategory.pug
@@ -10,7 +10,7 @@ block main
           .card-header.bg-gradient-primary-to-secondary.py-4.mb-4.rounded.shadow
             h1.mb-0.text-primary.text-center.font-weight-bold(style="text-shadow:2px 2px 8px #aaa;letter-spacing:2px;") 
               i.fas.fa-list-alt.mr-2
-              | Thêm Danh Mục  Sản Phẩm
+              | Sửa danh mục sản phẩm
           .card-body
             // Hiển thị thông báo lỗi
             if messages && messages.error
@@ -24,37 +24,37 @@ block main
                 span= messages.success
                 button(type="button", class="btn-close", data-bs-dismiss="alert", aria-label="Close")
 
-            form(action="/admin/products-category/create", id="form-create-product", method="post", enctype="multipart/form-data")
+            form(action=`/admin/products-category/edit/${product.id}?_method=PATCH`, id="form-edit-product", method="post", enctype="multipart/form-data")
               .row.g-3
                 .col-md-6
                   .form-group
                     label(for="title") Tiêu đề
-                    input(type="text", class="form-control", id="title", name="title", placeholder="Nhập tiêu đề sản phẩm ", required)
+                    input(type="text", class="form-control", id="title", name="title",  required , value=product.title)
                 .col-md-6
                   .form-group
                     label(for="title") Danh mục cha
-                    input(type="text", class="form-control", id="parent_id",name="parent_id" placeholder="Nhập danh mục  ")
+                    input(type="text", class="form-control", id="parent_id",value=product.parent_id)
               
 
                 .col-12
                   .form-group
                     label(for="desc") Mô tả
                     
-                    textarea.form-control(id="desc", , class="desc" ,name="description", rows="3", placeholder="Nhập mô tả sản phẩm")
+                    textarea.form-control(id="desc", , class="desc" ,name="description", rows="3") #{product.description}
                 
 
                 .col-12
                   div(class="form-group", data-upload-image)
                     label(for="thumbnail") Ảnh
-                    input(type="file", class="form-control", id="thumbnail", name="thumbnail", accept="image/*", data-upload-image-input)
+                    input(type="file", class="form-control", id="thumbnail", name="thumbnail", accept="image/*", data-upload-image-input )
                     .mt-2
-                      img(src="", class="image-preview rounded border", style="max-width:150px; max-height:150px;", data-upload-image-preview)
+                      img(src=product.thumbnail, class="image-preview rounded border", style="max-width:150px; max-height:150px;", data-upload-image-preview)
                       button(type="button", class="btn btn-danger btn-sm ms-2", data-upload-image-remove) X
 
                 .col-md-6
                   .form-group
                     label(for="position") Vị trí
-                    input(type="number", class="form-control", id="position", name="position", placeholder="Tự động tăng", min="-2")
+                    input(type="number", class="form-control", id="position", name="position", value=product.position)
 
                 .col-md-6
                   .form-group
@@ -67,5 +67,5 @@ block main
                       label(for="statusInactive", class="form-check-label") Ngừng hoạt động
 
                 .col-12.mt-4.d-flex.justify-content-between
-                  button(type="submit", class="btn btn-primary btn-lg px-5") Thêm mới
+                  button(type="submit", class="btn btn-primary btn-lg px-5") Cập nhật
                   a(href=`${prefixAdmin}/products`, class="btn btn-secondary btn-lg px-5") Hủy
