--- a/node/src/views/admin/patirals/header.pug
+++ b/node/src/views/admin/patirals/header.pug
@@ -3,7 +3,7 @@ header.header
     .container
       a.navbar-brand.d-flex.align-items-center(href="/")
         img(src="/img/ST.png" alt="Logo" width="50" class="me-2 shadow-sm")
-        span.fw-bold.fs-4.text-white ShopTech
+        span.fw-bold.fs-4.text-white SamThuy
       button.navbar-toggler(type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
         span.navbar-toggler-icon
       #navbarNav.collapse.navbar-collapse
