--- a/node/src/views/admin/pages/products/editCategory.pug
+++ b/node/src/views/admin/pages/products/editCategory.pug
@@ -33,7 +33,7 @@ block main
                 .col-md-6
                   .form-group
                     label(for="title") Danh mục cha
-                    input(type="text", class="form-control", id="parent_id",value=product.parent_id)
+                    input(type="text", class="form-control", id="parent_id", name="parent_id",value=product.parent_id)
               
 
                 .col-12
